--- a/src/app.css
+++ b/src/app.css
@@ -1,33 +1,43 @@
 html > body {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif!important;
 }
-
-.demo-card-event.mdl-card {
-  width: 100%;
-  height: 400px;
+.mdl-layout__content {
+  height: 100%;
 }
-
-.demo-card-event > .mdl-card__title {
+.app-page-content {
+  height: calc(100% - 64px);
+}
+.app-page-content > .mdl-grid {
+  height: calc(100% - 16px);
+}
+.app-page-content > .mdl-grid > .mdl-cell {
+  height: calc(100% - 16px);
+}
+.app-page-content > .mdl-grid > .mdl-cell > .app-card {
+  height: 100%;
+}
+.app-card.mdl-card {
+  width: 100%;
+  height: 100%;
+}
+.app-card > .mdl-card__title {
   height: 50px;
   color: #fff;
   align-items: flex-start;
   background: #46B6AC;
 }
-
-.demo-card-event > .mdl-card__actions {
+.app-card > .mdl-card__actions {
   display: flex;
-  box-sizing:border-box;
+  box-sizing: border-box;
   align-items: center;
   width: 100%;
   height: 50px;
   position: absolute;
   bottom: 0px;
 }
-
-.demo-card-event > .mdl-card__actions > .material-icons {
+.app-card > .mdl-card__actions > .material-icons {
   padding-right: 10px;
 }
-
-.demo-card-event > .mdl-card__supporting-text span {
+.app-card > .mdl-card__supporting-text span {
   display: block;
 }
