--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,15 @@
 html > body {
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif!important;
 }
+.CodeMirror {
+  width: 100%;
+  height: 100%;
+}
 .mdl-layout__content {
   height: 100%;
 }
 .app-page-content {
-  height: calc(100% - 64px);
+  height: 100%;
 }
 .app-page-content > .mdl-grid {
   height: calc(100% - 16px);
@@ -38,6 +42,6 @@ html > body {
 .app-card > .mdl-card__actions > .material-icons {
   padding-right: 10px;
 }
-.app-card > .mdl-card__supporting-text span {
-  display: block;
+.app-card > .mdl-card__supporting-text {
+  height: calc(100% - 132px);
 }
