--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -5,8 +5,7 @@
       <span class="mdl-layout-title">Electron Hosts</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
-      <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="1">account_box</div>
-      <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥">account_box</div>
+      <div *ngFor="let icon of icons" class="material-icons mdl-badge mdl-badge--overlap" attr.data-badge="{{icon.badge}}">{{icon.name}}</div>
     </div>
   </header>
   <div class="mdl-layout__drawer">
@@ -23,9 +22,7 @@
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--12-col">
           <div id="icon" class="app-card mdl-card mdl-card--border mdl-shadow--8dp">
-            <div id="app-card-title" class="mdl-card__title">
-              Icon
-            </div>
+            <div id="app-card-title" class="mdl-card__title">{{hostsPath}}</div>
             <div class="mdl-card__supporting-text">
               <textarea id="app-editor"></textarea>
             </div>
