--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -27,7 +27,7 @@
               <textarea id="app-editor"></textarea>
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a id="app-card-save" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">SAVE</a>
+              <a id="app-card-save" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" (click)="onSave()">SAVE</a>
               <div class="mdl-layout-spacer"></div>
               <i class="material-icons">save</i>
             </div>
